<resources>
    <string name="app_name">passwordLocker</string>
    <string name="login">Zaloguj się</string>
    <string name="loginButton">Login</string>
    <string name="password">Hasło</string>
    <string name="email">Email</string>
    <string name="register">Zarejestruj się</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="Name">Imię</string>
    <string name="Surname">Nazwisko</string>
    <string name="LoginNow">Zaloguj się!</string>
    <string name="RegisterNow">Zarejestruj się!</string>
    <string name="pin">Pin</string>
    <string name="wyloguj">Wyloguj!</string>
    <string name="title_activity_password_details">PasswordDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logout">Wyloguj się</string>
</resources>